Fix jdk 16 issue